# randomprime

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: gh-pages.yml  rust.yml
auto_struct_macros/: Cargo.toml
auto_struct_macros/src/: lib.rs
auto_struct_macros/tests/: test.rs
compile_to_ppc/: Cargo.toml  README.md
compile_to_ppc/primeapi-rs/src/: alignment_utils.rs  lib.rs  mp1.rs  rstl.rs
compile_to_ppc/rel_loader/src/: lib.rs
compile_to_ppc/rel_patches/src/: lib.rs
doc/: dol-patching.md
dol_linker/: Cargo.toml
dol_linker/src/: lib.rs
extra_assets/: cog.CMDL  power_beam.PART  power_beam_accent.TXTR  power_beam_capsule.TXTR  power_beam_part.TXTR  zoomer.CMDL
libsquish_wrapper/: Cargo.toml  build.rs
libsquish_wrapper/src/: lib.rs
nod_wrapper/: Cargo.toml  build.rs
nod_wrapper/src/: lib.rs
ppcasm/: Cargo.toml
ppcasm/ppcasm_macro/: Cargo.toml
ppcasm/ppcasm_macro/src/: lib.rs
ppcasm/src/: lib.rs
ppcasm/tests/: test.rs
reader_writer/: Cargo.toml
reader_writer/src/: array.rs  derivable_array_proxy.rs  fixed_array.rs  iterator_array.rs  lcow.rs  lib.rs  padding.rs  primitive_types.rs  read_only_array.rs  reader.rs  uncached.rs  utf16_string.rs  with_read.rs  writer.rs
schema/: randomprime.schema.json
src/: add_modify_obj_patches.rs  c_interface.rs  ciso_writer.rs  custom_assets.rs  dol_codegen.rs  dol_patcher.rs  dol_patches.rs  door_meta.rs  elevators.rs  extern_assets.rs  gcz_writer.rs  generic_edit.rs  lib.rs  mlvl_wrapper.rs  patch_config.rs  patcher.rs  patches.rs  pickup_meta.rs  pickup_meta.rs.in  room_lookup.rs  starting_items.rs  txtr_conversions.rs
structs/: Cargo.toml
structs/src/: ancs.rs  anim.rs  atbl.rs  bnr.rs  cmdl.rs  ctwk.rs  dol.rs  dumb.rs  evnt.rs  font.rs  frme.rs  gc_disc.rs  hint.rs  lib.rs  lib.rs.in  mapa.rs  mapw.rs  mlvl.rs  mrea.rs  pak.rs  part.rs  res_id.rs  savw.rs  scan.rs  scly.rs  strg.rs  thp.rs  txtr.rs
structs/src/scly_props/: actor.rs  actor_contraption.rs  actor_key_frame.rs  actor_rotate.rs  ai_jump_point.rs  ai_keyframe.rs  ambient_ai.rs  area_attributes.rs  (+128 more)
tools/win/: upgrade.bat
(+3 files in other folders)
